Docs, refactoring and system endpoints for Gm and Rl
