# gameManager/game/handlers.go
@@ -2,10 +2,10 @@ package game
 
 import (
 	"encoding/json"
+	"fmt"
 	"net/http"
 
-	"github.com/georace/game-manager/db"
-	customHTTP "github.com/georace/game-manager/http"
+	customHTTP "github.com/georace/gameManager/http"
 	"github.com/gorilla/mux"
 )
 
@@ -17,10 +17,13 @@ import (
 // @Success 200 {array} game.Game
 // @Failure 404 {object} http.ErrorResponse
 // @Router /games [get]
+// @Tags Games
 func IndexHandler(w http.ResponseWriter, r *http.Request) {
-	var games []Game
-	//since we're passing a pointer to games, db.Find assigns array to the address
-	db.DB.Find(&games)
+	games, err := List()
+	if err != nil {
+		customHTTP.NewErrorResponse(w, http.StatusInternalServerError, fmt.Sprintf("%v", err))
+
+	}
 	customHTTP.NewResponse(w, games)
 }
 
@@ -33,11 +36,12 @@ func IndexHandler(w http.ResponseWriter, r *http.Request) {
 // @Failure 404 {object} http.ErrorResponse
 // @Param gameId path int true "Game ID"
 // @Router /games/{gameId} [get]
+// @Tags Games
 func ShowHandler(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
-	var game Game
-	if db.DB.First(&game, params["gameId"]).RecordNotFound() {
-		customHTTP.NewErrorResponse(w, http.StatusNotFound, "No record found with id: "+params["gameId"])
+	game, err := Get(params["gameId"])
+	if err != nil {
+		customHTTP.NewErrorResponse(w, http.StatusNotFound, fmt.Sprintf("%v", err))
 		return
 	}
 	customHTTP.NewResponse(w, game)
@@ -52,27 +56,15 @@ func ShowHandler(w http.ResponseWriter, r *http.Request) {
 // @Success 200 {object} game.Game
 // @Failure 404 {object} http.ErrorResponse
 // @Router /games [post]
+// @Tags Games
 func CreateHandler(w http.ResponseWriter, r *http.Request) {
 	var newGame NewGame
 	err := json.NewDecoder(r.Body).Decode(&newGame)
-
+	game, err := Create(newGame)
 	if err != nil {
 		customHTTP.NewErrorResponse(w, http.StatusBadRequest, "Error: "+err.Error())
 		return
 	}
-	game, err := validateNewGame(newGame)
-	if err != nil {
-		customHTTP.NewErrorResponse(w, http.StatusBadRequest, "Error: "+err.Error())
-		return
-	}
-
-	err = db.DB.Create(&game).Error
-	if err != nil {
-		customHTTP.NewErrorResponse(w, http.StatusBadRequest, "Error: "+err.Error())
-		return
-	}
-	// Reload from database to get the join_secret from the trigger
-	db.DB.First(&game, game.ID)
 	customHTTP.NewResponse(w, game)
 }
 
@@ -84,37 +76,15 @@ func CreateHandler(w http.ResponseWriter, r *http.Request) {
 // @Success 200 {object} game.Game
 // @Failure 404 {object} http.ErrorResponse
 // @Router /games/{gameId} [delete]
+// @Tags Games
 func DeleteHandler(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
-	var game Game
-	var games []Game
 
-	db.DB.First(&game, params["gameId"])
-	db.DB.Delete(&game)
+	games, err := Delete(params["gameId"])
+	if err != nil {
+		customHTTP.NewErrorResponse(w, http.StatusBadGateway, "Error: "+err.Error())
+		return
+	}
 
-	db.DB.Find(&games)
 	customHTTP.NewResponse(w, games)
 }
-
-// UpdateHandler godoc
-// @Summary Delete game
-// @Description deletes a game
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} game.Game
-// @Failure 404 {object} http.ErrorResponse
-// @Router /games/{gameId} [put]
-// func UpdateHandler(w http.ResponseWriter, r *http.Request) {
-// 	params := mux.Vars(r)
-// 	var game Game
-// 	reqgameId := r.Header.Get("gameId")
-
-// 	w.Header().Set("Content-Type", "application/json")
-// 	if params["gameId"] != reqgameId {
-// 		customHTTP.NewErrorResponse(w, http.StatusUnauthorized, "Not allowed to edit other games")
-// 		return
-// 	}
-// 	db.DB.First(&game, params["gameId"])
-// 	db.DB.Model(&game).Update("name", r.FormValue("name"))
-// 	json.NewEncoder(w).Encode(&game)
-// }
